2015.05.01
- Gnome-Shell : small refinement
- GTK2:  some changes applied to buttons and treeview header to match gtk3 theme

2015.04.19:
- convert titlebar buttons to png (seems that svg images  don't scale well) and
  make them a little bit bigger 
- GTK3 toolbar : no bottom border (match GTK2 theme)


2015.04.17:
- Initial release for gnome 3.16:
- GTK3 : applied almost changes for gtk3+ v3.16.x
- Gnome Shell: new theme based on Paper theme...